# STADS

./: .gitignore  README.md  pyproject.toml  pythonkurs2020.code-workspace
lec02/: agenda.md
