[tool.poetry]
name = "pythonkurs2020_part1"
version = "0.1.0"
description = ""
authors = ["Moritz Kern <moritz.kern@stads.de>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^5.3.4"
nbconvert = "^6.0.6"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
notebook = "^6.1.4"
jupyter_contrib_nbextensions = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
